fixes cleared layer z-index position

--- a/www/Default_files/default.css
+++ b/www/Default_files/default.css
@@ -193,6 +193,7 @@ canvas.clearedSnowCanvas
     top: 0px;
     left: 0px;
     opacity: 1.0;
+    z-index: 100;
 }
 
 #blizzardContainer{
